jaekyeong/kubernetes_setting/gaze_example/gaze_tracking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gaze-tracking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gaze-tracking
  template:
    metadata:
      labels:
        app: gaze-tracking
    spec:
      containers:
      - name: gaze-tracking
        image: pepi10/gaze-tracking:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: gaze-tracking-service
spec:
  selector:
    app: gaze-tracking
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30659
  type: LoadBalancer
