jaekyeong/kubernetes_setting/gaze_example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /gaze
        pathType: Prefix
        backend:
          service:
            name: gaze-tracking-service
            port: 
              number: 80
      - path: /emotion
        pathType: Prefix
        backend:
          service:
            name: emotion-analysis-service
            port: 
              number: 80
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: result-aggregator-service
            port: 
              number: 80
